Fix some bugs on IE 7.

--- a/public/css/accounts-login.css
+++ b/public/css/accounts-login.css
@@ -14,8 +14,43 @@ div#wrapper {
     height: 100%;
 }
 
+div#wrapper div#upgrade-browser {
+    background-color: #fae692;
+    color: #333;
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 15px 0;
+}
+
+div#wrapper div#upgrade-browser h3,
+div#wrapper div#upgrade-browser p {
+    margin: 0;
+}
+
+div#wrapper div#upgrade-browser div.span8 {
+    background: url('../img/upgrade-browser.png') no-repeat;
+}
+
+div#wrapper div#upgrade-browser div.span8 div.notice {
+    padding-left: 50px;
+}
+
+div#wrapper div#upgrade-browser div.span4 {
+    text-align: right;
+}
+
+div#wrapper div#upgrade-browser div.span4 button {
+    margin-right: 10px;
+}
+
 div#content {
     padding-top: 100px;
+}
+
+div.container {
     width: 960px;
 }
 
@@ -44,6 +79,8 @@ form#signin-form h1 {
 form#signin-form input[type=text],
 form#signin-form input[type=password] {
     height: 40px;
+    *padding-top: 10px; /*IE7*/
+    *height: 30px; /*IE7*/
 }
 
 form#signin-form button,
@@ -77,14 +114,14 @@ div#footer a {
 /* Smaller than standard 960 (devices and browsers) */
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-    div#content {
+    div.container {
         width: 768px;
     }
 }
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
-    div#content {
+    div.container {
         padding-top: 40px;
     }
 
@@ -95,14 +132,14 @@ div#footer a {
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-    div#content {
+    div.container {
         width: 480px;
     }
 }
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
-    div#content {
+    div.container {
         width: 320px;
     }
 }
