--- a/public/css/home-activity.css
+++ b/public/css/home-activity.css
@@ -8,15 +8,21 @@ div#content div.alert {
 }
 
 div#content h1 {
-	margin-bottom: 20px;
+	margin: 10px 0;
+}
+
+div#content div.section-header div.span4 {
+	text-align: right;
+}
+
+div#content div.span6 {
+	padding-bottom: 20px;
 }
 
 div#content div.activity {
 	background-color: #fff;
 	border: 1px solid #d2d2d2;
 	font-size: 13px;
-	margin-bottom: 18px;
-	position: relative;
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
 			border-radius: 3px;
@@ -114,6 +120,14 @@ div#content div#activity-detail ul.participants {
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
+	div#content div.section-header div.span8,
+	div#content div.section-header div.span4 {
+		text-align: center;
+	}
+
+	div#content div.section-header div.span4 {
+		margin-bottom: 10px;
+	}
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
